zurimpact/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zurimpact-frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      # securityContext:
      #   runAsNonRoot: false # fix this needs/should be true
        # runAsUser: 1000
        # fsGroup: 1000
        # seccompProfile:
        #   type: RuntimeDefault
      containers:
      - name: zurimpact-frontend
        image: ghcr.io/zurimpact/zurimpact-frontend:dev-latest
        # securityContext:
        #   allowPrivilegeEscalation: true
        #   readOnlyRootFilesystem: false
        #   capabilities:
        #     drop:
        #     - ALL
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 80
          name:  frontend
