zurimpact/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: zurimpact-backend
    protocol: TCP
    port: 8080
    targetPort: 8080
