zurimpact/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: zurimpact-frontend
    protocol: TCP
    port: 8080
    targetPort: 8080
